--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -1,11 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <title>Keerthana - Front-End Developer | React Specialist</title>
+    <meta name="description" content="Portfolio of Keerthana, a Front-End Developer with 3+ years of experience in React.js, JavaScript, and modern UI frameworks." />
+    <meta name="author" content="Keerthana" />
+
+    <meta property="og:title" content="Keerthana - Front-End Developer | React Specialist" />
+    <meta property="og:description" content="Portfolio of Keerthana, a Front-End Developer with 3+ years of experience in React.js, JavaScript, and modern UI frameworks." />
+    <meta property="og:type" content="website" />
+    
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
